exports[`Component: Alert should allow setting alert type 1`] = `
<div
  className="alert alert-danger"
  role="alert">
  Content
</div>
`;

exports[`Component: Alert should allow skipping title 1`] = `
<div
  className="alert alert-info"
  role="alert">
  Content
</div>
`;

exports[`Component: Alert should default type to info 1`] = `
<div
  className="alert alert-info"
  role="alert">
  Content
</div>
`;

exports[`Component: Alert should render with title and children 1`] = `
<div
  className="alert alert-info"
  role="alert">
  <strong>
    Title
     - 
  </strong>
  Content
</div>
`;
